# robotics_cicd

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  architecture.md  project_plan.md  todo.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  task.yml
.github/workflows/: ci.yml  release.yml
config/: fastdds_ci_profile.xml
docker/: Dockerfile  entrypoint.sh
otonav_bringup/: CMakeLists.txt  package.xml
otonav_bringup/config/: bridge_params.yaml
otonav_bringup/launch/: sim.launch.py
otonav_bringup/test/: test_goal_reach.py  test_odom_smoke.py
otonav_control/: CMakeLists.txt  package.xml
otonav_control/include/otonav_control/: diff_drive_kinematics.hpp
otonav_control/test/: test_diff_drive_kinematics.cpp
otonav_description/: CMakeLists.txt  package.xml
otonav_description/model/: otonav.xml  scene_goal.xml
otonav_mujoco_bridge/: CMakeLists.txt  package.xml
otonav_mujoco_bridge/include/otonav_mujoco_bridge/: can_bus_interface.hpp  mujoco_interface.hpp  robot_hardware_interface.hpp  topic_names.hpp
otonav_mujoco_bridge/src/: bridge_node.cpp  can_bus_interface.cpp  mujoco_interface.cpp
otonav_nav/: CMakeLists.txt  package.xml
otonav_nav/include/otonav_nav/: go_to_goal.hpp  obstacle_guard.hpp
otonav_nav/src/: go_to_goal_node.cpp
otonav_nav/test/: test_go_to_goal.cpp  test_obstacle_guard.cpp
